<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_email">Email</string>
    <string name="field_email_hint">Enter email address</string>
    <string name="email_autoFillHints">emailAddress</string>
    <string name="field_password_hint">Enter Password</string>
    <string name="label_password">Password</string>
    <string name="password_autoFillHints">password</string>
    <string name="text_login_btn">Login</string>
    <string name="onboarding_header_lable">Hello and Welcome to the Inventory App</string>
    <string name="label_content_text">This application will help you manage inventory of your products.</string>
    <string name="label_content_second_text">Please Enter your name and proceed further for instructions how to use this application.</string>
    <string name="btn_next_text">Next</string>
    <string name="hint_field_name">Name</string>
    <string name="instruction_header_text">This application have 3 basic features as follows:</string>
    <string name="instructions_text">
        \u25CF  You can view products that you added in the catalog in the Inventory screen
        \n\n
        \u25CF  You can add new products by clicking on the "Plus" button on the bottom right corner in the Inventory screen
        \n\n
        \u25CF  You can View or Edit the details of the product you added
    </string>
    <string name="hello_instructions_text">Hello </string>
    <string name="no_item_label_text">There are no products yet!\n\n:(</string>
    <string name="label_product_name">Product name:</string>
    <string name="add_product">Add Product</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_product_category">Product Category</string>
    <string name="hint_product_company">Product Company</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_save">Save</string>
    <string name="btn_text_delete">Delete</string>
    <string name="error_saving">Unable to save Product :(</string>
    <string name="error_deleting">Unable to delete Product</string>
    <string name="btn_text_update">Update</string>
    <string name="menu_title_logout">Logout</string>
    <string name="label_product_company">Product Company</string>
    <string name="label_product_category">Product Category</string>
    <string name="label_product_description">Product Description</string>
    <string name="text_disabled">Product Name is not Editable</string>
</resources>