<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.inventoryapp.screens.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_email"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_regular"
            android:text="@string/label_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/field_email"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <EditText
            android:id="@+id/field_email"
            style="@style/field_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="@dimen/margin_regular"
            android:autofillHints="@string/email_autoFillHints"
            android:ems="10"
            android:hint="@string/field_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/label_email"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/label_password"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large_x"
            android:text="@string/label_password"
            app:layout_constraintStart_toStartOf="@+id/label_email"
            app:layout_constraintTop_toBottomOf="@+id/label_email" />

        <EditText
            android:id="@+id/field_password"
            style="@style/field_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password_autoFillHints"
            android:ems="10"
            android:hint="@string/field_password_hint"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_password"
            app:layout_constraintStart_toStartOf="@+id/field_email" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/text_login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>