<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499">

            <TextView
                android:id="@+id/label_header"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_header_lable" />

            <TextView
                android:id="@+id/label_content"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="@string/label_content_text" />

            <TextView
                android:id="@+id/label_content_second"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="@string/label_content_second_text" />

            <EditText
                android:id="@+id/field_name"
                style="@style/field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_regular"
                android:autofillHints="Name"
                android:ems="10"
                android:hint="@string/hint_field_name"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_next"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/btn_next_text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>