<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="itemDetailViewModel"
            type="com.example.inventoryapp.viewmodels.ItemDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lable_product_detail_name"
                        style="@style/label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_regular"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:gravity="center_vertical"
                        android:text="@string/label_product_name" />

                    <EditText
                        android:id="@+id/field_product_detail_name"
                        style="@style/field_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_regular"
                        android:ems="10"
                        android:hint="@string/hint_product_name"
                        android:autofillHints="Product"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lable_product_detail_company"
                        style="@style/label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_regular"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:gravity="center_vertical"
                        android:text="@string/label_product_name" />

                    <EditText
                        android:id="@+id/field_product_detail_company"
                        style="@style/field_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_regular"
                        android:ems="10"
                        android:hint="@string/hint_product_company"
                        android:autofillHints="Company"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lable_product_detail_category"
                        style="@style/label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_regular"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:gravity="center_vertical"
                        android:text="@string/label_product_name" />

                    <EditText
                        android:id="@+id/field_product_detail_category"
                        style="@style/field_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_regular"
                        android:ems="10"
                        android:hint="@string/hint_product_category"
                        android:autofillHints="Category"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lable_product_detail_description"
                        style="@style/label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_regular"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:gravity="center_vertical"
                        android:text="@string/label_product_name" />

                    <EditText
                        android:id="@+id/field_product_detail_description"
                        style="@style/field_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_regular"
                        android:autofillHints="Description"
                        android:ems="10"
                        android:hint="@string/hint_product_description"
                        android:inputType="textMultiLine" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>